--- a/_posts/2017-08-14-Build-170814.md
+++ b/_posts/2017-08-14-Build-170814.md
@@ -3,6 +3,6 @@ build: 170814
 stage: alpha
 ---
 
-* gh-1224: Process dead chars AltGr+~ and AltGr+` in XTerm emulation.
+* [conemu#1224](https://github.com/Maximus5/ConEmu/issues/1224): Process dead chars AltGr+~ and AltGr+` in XTerm emulation.
 * Settings\Debug: Show XTerm keyboard and mouse sequences in ‘Input’ mode.
 
