--- a/_posts/2017-08-19-Build-170819.md
+++ b/_posts/2017-08-19-Build-170819.md
@@ -3,5 +3,5 @@ build: 170819
 stage: alpha
 ---
 
-* gh-1164, gh-1216, gh-1219: Workaround for Window 10 conhost bug when content is erased on resize.
-* gh-1212: After ‘Unfasten’, unfastened console loses arrow key capability.
+* [conemu#1164](https://github.com/Maximus5/ConEmu/issues/1164), [conemu#1216](https://github.com/Maximus5/ConEmu/issues/1216), [conemu#1219](https://github.com/Maximus5/ConEmu/issues/1219): Workaround for Window 10 conhost bug when content is erased on resize.
+* [conemu#1212](https://github.com/Maximus5/ConEmu/issues/1212): After ‘Unfasten’, unfastened console loses arrow key capability.
