--- a/_posts/2017-08-07-Build-170807.md
+++ b/_posts/2017-08-07-Build-170807.md
@@ -4,8 +4,8 @@ stage: preview
 ---
 
 * Switch `-fork` was not working (e.g. `ConEmuC -fork -c powershell`).
-* gh-1220: Fix AltGr+Key sent with XTerm keyboard emulation (e.g. tilde and square brackets on german keyboard).
-* gh-740: Flexible config allowing or disallowing POSIX paths conversion.
+* [conemu#1220](https://github.com/Maximus5/ConEmu/issues/1220): Fix AltGr+Key sent with XTerm keyboard emulation (e.g. tilde and square brackets on german keyboard).
+* [conemu#740](https://github.com/Maximus5/ConEmu/issues/740): Flexible config allowing or disallowing POSIX paths conversion.
   * If mount prefix is disabled with `-new_console:p:-` switch than autoconversion is disabled.
   * GuiMacro `Paste` doesn't do autoconversion with exception of mode `Paste(8)` which does.
   * Checkboxes ‘Allow Windows to POSIX path conversion’ on ‘Paste’ and ‘App distinct’ setting pages.
