--- a/_posts/2018-04-18-Build-180418.md
+++ b/_posts/2018-04-18-Build-180418.md
@@ -16,3 +16,4 @@ stage: preview
 * By default add commented `LANG` variable and some aliases to ‘Environment’ settings page.
 * Hidden cursor may be displayed as inactive (option for debug purposes).
 * Add hotkey for ‘Check for updates’.
+* Add helper `git-log.cmd` to distro.
