--- a/_posts/2020-07-13-Build-200713.md
+++ b/_posts/2020-07-13-Build-200713.md
@@ -4,7 +4,7 @@ stage: preview
 ---
 
 * [conemu#2009](https://github.com/Maximus5/ConEmu/issues/2009): Autoload font files from ConEmuDir/ConEmuBaseDir (fix).
-* [conemu#2130](https://github.com/Maximus5/ConEmu/issues/2130): Use v141_xp toolset to build Release|x86.
+* [conemu#2130](https://github.com/Maximus5/ConEmu/issues/2130): Use `v141_xp` toolset to build `Release|x86`.
 * Fix 'Settings/Debug/Exec' monitoring: files weren't loaded after '@'.
 * Button 'Register ConEmu autorun' didn't work in some cases.
 * Fix console lags and size during ConEmu cmd autoattach initialization.
