Clarify git-push-set-upstream.cmd

--- a/_posts/2020-11-01-Build-201101.md
+++ b/_posts/2020-11-01-Build-201101.md
@@ -4,7 +4,8 @@ stage: alpha
 ---
 
 * Fixes for compilation with mingw64 on Linux.
-* Add sample cmd script to `git push --set-upstream ...` using current local branch.
+* Add sample cmd script `%ConEmuBaseDir%\Scripts\git-push-set-upstream.cmd` to call `git push --set-upstream ...`
+  using current local branch.
 * [conemu#2191](https://github.com/Maximus5/ConEmu/issues/2191): Alt+Space - show System Menu on key down.
 * Update icon for nuget/choco packages.
 * GuiMacro: WindowMode(TWidth) maximizes window width.
